Fixed blog feeds on mobile

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -110,6 +110,7 @@ p {
 
 p.byline {
   font-size: 1.5rem;
+  line-height: 1.8rem;
 }
 
 a {
