--- a/_sass/layouts/blog.scss
+++ b/_sass/layouts/blog.scss
@@ -45,3 +45,12 @@
     }
   }
 }
+
+@media screen and (max-width: $breakpoint-m) {
+  .blog-block-item .post-title h4 {
+    font-size: 1.5rem;
+  }
+  .blog-list-item .share-page {
+    text-align: left;
+  }
+}
